--- a/frontend/lib/l10n/app_en.arb
+++ b/frontend/lib/l10n/app_en.arb
@@ -2,15 +2,21 @@
   "@@locale": "en",
   "add": "Add",
   "cancel": "Cancel",
+  "categoryNotFound": "Category not found",
+  "deletePlace": "Delete Place",
+  "deletePlaceQuestion": "Do you want to delete this place?",
   "description": "Description",
   "latitude": "Latitude",
   "longitude": "Longitude",
   "name": "Name",
+  "noCategories": "No categories available",
   "noDescription": "No description available",
   "osm": "OSM",
+  "placeNotFound": "Place not found",
   "satellite": "Satellite",
   "save": "Save",
   "showMarkers": "Show markers",
   "showOverlay": "Show overlay",
-  "vector": "Vector"
+  "vector": "Vector",
+  "yes": "Yes"
 }
