--- a/frontend/lib/l10n/app_en.arb
+++ b/frontend/lib/l10n/app_en.arb
@@ -3,20 +3,20 @@
   "add": "Add",
   "cancel": "Cancel",
   "categoryNotFound": "Category not found",
+  "defaultMap": "Default",
   "deletePlace": "Delete Place",
   "deletePlaceQuestion": "Do you want to delete this place?",
   "description": "Description",
+  "explore": "Explore",
   "latitude": "Latitude",
   "longitude": "Longitude",
   "name": "Name",
   "noCategories": "No categories available",
   "noDescription": "No description available",
-  "osm": "OSM",
   "placeNotFound": "Place not found",
   "satellite": "Satellite",
   "save": "Save",
   "showMarkers": "Show markers",
   "showOverlay": "Show overlay",
-  "vector": "Vector",
   "yes": "Yes"
 }
