fix(fe): add search hint

--- a/frontend/lib/l10n/app_de.arb
+++ b/frontend/lib/l10n/app_de.arb
@@ -16,6 +16,7 @@
   "placeNotFound": "Ort nicht gefunden",
   "satellite": "Satellit",
   "save": "Speichern",
+  "searchPlaces": "Orte suchen",
   "showMarkers": "Markierungen anzeigen",
   "showOverlay": "Overlay anzeigen",
   "yes": "Ja"
