--- a/frontend/lib/l10n/app_en.arb
+++ b/frontend/lib/l10n/app_en.arb
@@ -16,6 +16,7 @@
   "placeNotFound": "Place not found",
   "satellite": "Satellite",
   "save": "Save",
+  "searchPlaces": "Search places",
   "showMarkers": "Show markers",
   "showOverlay": "Show overlay",
   "yes": "Yes"
