fix(fe): add localization to map layer

--- a/frontend/lib/l10n/app_de.arb
+++ b/frontend/lib/l10n/app_de.arb
@@ -9,6 +9,7 @@
   "description": "Beschreibung",
   "latitude": "Breitengrad",
   "longitude": "Längengrad",
+  "mapLayer": "Kartentyp",
   "name": "Name",
   "noCategories": "Keine Kategorien verfügbar",
   "noDescription": "Keine Beschreibung verfügbar",
