--- a/frontend/lib/l10n/app_en.arb
+++ b/frontend/lib/l10n/app_en.arb
@@ -4,6 +4,8 @@
   "cancel": "Cancel",
   "categoryNotFound": "Category not found",
   "defaultMap": "Default",
+  "deleteAsset": "Delete Asset",
+  "deleteAssetQuestion": "Do you want to delete this asset?",
   "deletePlace": "Delete Place",
   "deletePlaceQuestion": "Do you want to delete this place?",
   "description": "Description",
