feat(fe): settings sheet

--- a/frontend/lib/l10n/app_en.arb
+++ b/frontend/lib/l10n/app_en.arb
@@ -2,6 +2,7 @@
   "@@locale": "en",
   "add": "Add",
   "cancel": "Cancel",
+  "categories": "Categories",
   "categoryNotFound": "Category not found",
   "defaultMap": "Default",
   "deleteAsset": "Delete Asset",
@@ -16,10 +17,12 @@
   "name": "Name",
   "noCategories": "No categories available",
   "noDescription": "No description available",
+  "user": "Anonymous User",
   "placeNotFound": "Place not found",
   "satellite": "Satellite",
   "save": "Save",
   "searchPlaces": "Search places",
+  "settings": "Settings",
   "showMarkers": "Show markers",
   "showOverlay": "Show overlay",
   "yes": "Yes"
