--- a/frontend/lib/l10n/app_en.arb
+++ b/frontend/lib/l10n/app_en.arb
@@ -15,6 +15,7 @@
   "longitude": "Longitude",
   "mapLayer": "Map Layer",
   "name": "Name",
+  "newCategory": "New Category",
   "noCategories": "No categories available",
   "noDescription": "No description available",
   "user": "Anonymous User",
