fix(fe): new localization

--- a/frontend/lib/l10n/app_de.arb
+++ b/frontend/lib/l10n/app_de.arb
@@ -1,6 +1,7 @@
 {
   "@@locale": "de",
   "add": "Hinzufügen",
+  "anonymousUser": "Anonymer Benutzer",
   "cancel": "Abbrechen",
   "categories": "Kategorien",
   "categoryNotFound": "Kategorie nicht gefunden",
@@ -10,16 +11,21 @@
   "deletePlace": "Ort löschen",
   "deletePlaceQuestion": "Möchten Sie diesen Ort löschen?",
   "description": "Beschreibung",
+  "email": "Email",
   "explore": "Erkunden",
   "latitude": "Breitengrad",
+  "login": "Einloggen",
+  "logout": "Ausloggen",
   "longitude": "Längengrad",
   "mapLayer": "Kartentyp",
   "name": "Name",
   "newCategory": "Neue Kategorie",
   "noCategories": "Keine Kategorien verfügbar",
   "noDescription": "Keine Beschreibung verfügbar",
-  "user": "Anonymer Benutzer",
+  "username": "Nutzername",
+  "password": "Passwort",
   "placeNotFound": "Ort nicht gefunden",
+  "register": "Registrieren",
   "satellite": "Satellit",
   "save": "Speichern",
   "searchPlaces": "Orte suchen",
