--- a/frontend/lib/l10n/app_en.arb
+++ b/frontend/lib/l10n/app_en.arb
@@ -1,6 +1,7 @@
 {
   "@@locale": "en",
   "add": "Add",
+  "anonymousUser": "Anonymous User",
   "cancel": "Cancel",
   "categories": "Categories",
   "categoryNotFound": "Category not found",
@@ -10,16 +11,21 @@
   "deletePlace": "Delete Place",
   "deletePlaceQuestion": "Do you want to delete this place?",
   "description": "Description",
+  "email": "Email",
   "explore": "Explore",
   "latitude": "Latitude",
+  "login": "Login",
+  "logout": "Logout",
   "longitude": "Longitude",
   "mapLayer": "Map Layer",
   "name": "Name",
   "newCategory": "New Category",
   "noCategories": "No categories available",
   "noDescription": "No description available",
-  "user": "Anonymous User",
+  "username": "Username",
+  "password": "Password",
   "placeNotFound": "Place not found",
+  "register": "register",
   "satellite": "Satellite",
   "save": "Save",
   "searchPlaces": "Search places",
